# mc_hackathon

./: BACKEND_SETUP.md  HTTPS_SETUP.md  README.md  docker-compose.yml  generate-certs.sh  start-backend.sh  start-https.sh
backend/: .env.example  .gitignore  Makefile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 10e5fb446bf6_create_users_table_manually.py  316730bbb052_create_users_table.py  31e991d7aca4_create_users_table.py  3a0aaeeb7726_remove_password_fields_from_users_table.py  3a2b50d54923_create_users_table_with_proper_import.py  95736f6acbc9_remove_full_name_from_users.py  a0a6a1edeb67_add_others_field_to_users_table.py  bb161eaab271_create_users_table.py  be18ca37f291_create_users_table.py
backend/app/: factory.py
backend/app/api/: routes.py
backend/app/api/routers/: gemini.py  health.py  system_prompt.py  tts.py  users.py
backend/app/core/: auth.py  config.py  database.py  init_admin.py  logging.py  security.py
backend/app/middleware/: logging_middleware.py
backend/app/models/: user.py
backend/app/schemas/: intents.py  tts.py  user.py
backend/app/services/: user_service.py
frontend/: .env.example  README_SPEECH.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: ActionButton.vue  VoiceRecordingButton.vue
frontend/src/composables/: apiTTS.ts  useApi.ts  useCamera.ts  usePermissions.ts  useTTS.ts
frontend/src/services/: authService.ts  cameraService.ts  speechToText.ts  textToSpeech.ts  useAPI.ts  voiceCommandService.ts
(+1 files in other folders)
